--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -21,11 +21,16 @@
             </div>
             <!-- Basic details -->
             <div class="row">
-                <div class="offset-by-two columns one columns"><b>Name:</b></div>
-                <div class="two columns">{{content['name']}}</div>
-                <div class="one columns"><b>XP:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['xp']}}</div>
-                <div class="two columns" style="text-align:center;"><b>Level:&nbsp;&nbsp;&nbsp;&nbsp;</b>{{content['level']}}</div>
-                <div class="two columns"><b>HP:&nbsp;&nbsp;&nbsp;&nbsp;</b> {{content['hit_points']}} / {{content['hit_points']}}</div>
+                <div class="offset-by-two columns three columns"><b>Name</b></div>
+                <div class="one columns" style="text-align:right;"><b>XP</b></div>
+                <div class="two columns" style="text-align:right;"><b>Level</b></div>
+                <div class="two columns" style="text-align:right;"><b>HP</b></div>
+            </div>
+            <div class="row">
+                <div class="offset-by-two columns three columns">{{content['name']}}</div>
+                <div class="one columns" style="text-align:right;">{{content['xp']}}</div>
+                <div class="two columns" style="text-align:right;">{{content['level']}}</div>
+                <div class="two columns" style="text-align:right;">{{content['hit_points']}} / {{content['hit_points']}}</div>
             </div>
             <br>
             <!-- Traits -->
