--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,6 +17,9 @@
                 <div class="offset-by-two columns eight columns" style="text-align:center;"><b>A character generator for the Knave role playing game.</b></div>
             </div>
             <div class="row">
+                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.9em;"><a href="{{content['id']}}">Permalink</a></div>
+            </div>
+            <div class="row">
                 <div class="offset-by-one column ten columns"><hr></div>
             </div>
             <!-- Basic details -->
