Revert "the same word, again"
This reverts commit 6944574515be0c587442eb0e0ff5798ea01a9b82.

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -23,7 +23,7 @@
             % end
             % if defined('permalinked') and permalinked:
             <div class="row">
-                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.8em;">(This permalink expires in 30 days since last viewed)</div>
+                <div class="offset-by-two columns eight columns" style="text-align:center;font-size:0.8em;">(This permalink expires in 30 days since the last use)</div>
             </div>
             % end
             <div class="row">
